# encoding-music-mcp

./: .dockerignore  .gitignore  404.html  AGENTS.md  Caddyfile  Dockerfile  README.md  cloud_server.py  dev_server.py  docker-compose.yml  fastmcp.json  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docker-publish.yml  docs.yml  test.yml
api-reference/: index.html
development/contributing/: index.html
development/structure/: index.html
development/testing/: index.html
docs/: api-reference.md  index.md
docs/development/: contributing.md  structure.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/resources/: bach.md  bartok.md  mei-files.md  morley.md
docs/tools/: discovery.md  index.md  key-analysis.md  metadata.md  notation.md  play-excerpt.md  rendering.md  uploads.md  voice-ranges.md  weighted-note-distribution.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
output/: Bach_BWV_0772_m1-4_incipit.html
private/: macos-playback-requirements.md
resources/bach/: index.html
resources/bartok/: index.html
resources/mei-files/: index.html
resources/morley/: index.html
search/: search_index.json
src/encoding_music_mcp/: __init__.py  (+1 more)
tests/: README.md  __init__.py  test_comprehensive_analysis_sampled.py  test_comprehensive_analysis_tool.py  test_discovery.py  test_incipits.py  test_intervals.py  test_key_analysis.py  test_melodic_ngram_heatmap.py  test_metadata.py  test_notation.py  test_play_excerpt.py  test_sampling_diagnostics.py  test_sonority_ngram_progress.py  test_uploads.py  test_voice_ranges.py  test_weighted_note_distribution.py
tools/: index.html
(+403 files in other folders)
