[project]
name = "encoding-music-mcp"
version = "0.1.0"
description = "MCP server for analysis of MEI (Music Encoding Initiative) files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "crim-intervals>=2.0.61",
]

[project.scripts]
encoding-music-mcp = "encoding_music_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
