[project]
name = "encoding-music-mcp"
version = "0.1.0"
description = "MCP server for analysis of MEI (Music Encoding Initiative) files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "crim-intervals>=2.0.61",
    "cairosvg>=2.8.2",
]

[project.scripts]
encoding-music-mcp = "encoding_music_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "mkdocs-material>=9.6.22",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
