[project]
name = "encoding-music-mcp"
version = "0.1.0"
description = "MCP server for analysis of MEI (Music Encoding Initiative) files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==2.14.3",
    "crim-intervals @ git+https://github.com/HCDigitalScholarship/intervals.git@rich_dev_24_dev",
]

[project.scripts]
encoding-music-mcp = "encoding_music_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "mkdocs-material>=9.6.22",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
